--- a/Folder_Browser_Dialog_Test/Folder_Browser_Dialog_Test/MainWindow.xaml
+++ b/Folder_Browser_Dialog_Test/Folder_Browser_Dialog_Test/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Backup_PLC_data_Applicaiton.MainWindow"
+﻿<Window x:Class="Folder_Browser_Dialog_Test.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Backup_PLC_data_Applicaiton"
+        xmlns:local="clr-namespace:Folder_Browser_Dialog_Test"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="250" Width="600">
     <Grid>
-
+        <Button Name="btnFire" Width="120" Height="40" Content="Fire" Click="btnFire_Click"  />
     </Grid>
 </Window>
